--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
+{% extends "rango/base.html" %}
 {% load staticfiles %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About</title>
-</head>
-<body>
+{% block title_block %}
+    About
+{% endblock %}
+{% block body_block %}
     <div>This tutorial has been put together by Jack<br>
         <img src="{% static "images/rango.jpg" %}">
     </div>
-</body>
-</html>
+{% endblock %}
