--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
+{% extends "rango/base.html" %}
+{% load staticfiles %}
+{% block title_block %}
+    Add a Category
+{% endblock %}
+{% block body_block %}
     <h1>Add a Page</h1>
     <div>
         {% if category%}
@@ -24,5 +23,4 @@
             <div>A category by this name does not exist</div>
         {% endif%}
     </div>
-</body>
-</html>
+{% endblock %}
