--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,31 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rango</title>
-</head>
-<body>
-    <div>
-        {% if category %}
-            <h1>{{ category.name }}</h1>
-            {% if pages %}
-                <ul>
-                {% for page in pages %}
-                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                {% endfor %}
-                </ul>
-            {% else %}
-                <strong>No pages currently in category.</strong>
-            {% endif %}
-            <div>
-                <a href="{% url 'add_page' category_name_slug=category.slug %}">Add page</a>
-            </div>
+{% extends "rango/base.html" %}
+{% load staticfiles %}
+
+{% block title_block %}
+    {{ category.name }}
+{% endblock %}
+
+{% block body_block %}
+    {% if category %}
+        <h1>{{ category.name }}</h1>
+        {% if pages %}
+            <ul>
+            {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+            </ul>
         {% else %}
-            The specified category does not exist!
+            <strong>No pages currently in category.</strong>
         {% endif %}
         <div>
-            <a href="{% url 'index' %}">Home</a>
+            <a href="{% url 'add_page' category.slug %}">Add page</a>
         </div>
-    </div>
-</body>
-</html>
+    {% else %}
+        The specified category does not exist!
+    {% endif %}
+{% endblock %}
