--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
+{% extends "rango/base.html" %}
 {% load staticfiles %}
 
-<html>
-    <head>
-        <title>Rango</title>
-        <link rel="stylesheet" href="{% static "css/base.css" %}">
-        <script src="{% static "js/jquery.js" %}"></script>
-    </head>
-<body>
+{% block body_block %}
     <h1>Rango says...</h1>
     <div>
         hey there partner!
@@ -18,7 +12,7 @@
             <ul>
                 {% for category in categories %}
                     <li>
-                        <a href="/rango/category/{{ category.slug }}">{{ category.name }}</a>
+                        <a href="{% url "show_category" category.slug %}">{{ category.name }}</a>
                     </li>
                 {% endfor %}
             </ul>
@@ -38,10 +32,4 @@
             <strong>There are no categories present.</strong>
         {% endif %}
     </div>
-    <div>
-        <a href="/rango/about/">About</a><br/>
-        <a href="/rango/add_category/">Add a New Category</a><br />
-        <img src="{% static "images/rango.jpg" %}" alt="Picture of rango">
-    </div>
-</body>
-</html>
+{% endblock %}
