--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -4,7 +4,11 @@
 {% block body_block %}
     <h1>Rango says...</h1>
     <div>
-        hey there partner!
+        {% if user.is_authenticated %}
+            Hello {{ user.username }}!
+        {% else %}
+            Hey there partner!
+        {% endif %}
     </div>
     <div>
         {% if categories %}
