Added possibility user logout. Restricted access to Category, Page.

--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -17,9 +17,11 @@
         {% else %}
             <strong>No pages currently in category.</strong>
         {% endif %}
-        <div>
-            <a href="{% url 'add_page' category.slug %}">Add page</a>
-        </div>
+        {% if user.is_authenticated %}
+            <div>
+                <a href="{% url 'add_page' category.slug %}">Add page</a>
+            </div>
+        {% endif %}
     {% else %}
         The specified category does not exist!
     {% endif %}
