Added possibility user authentication with help Django-Registration-Redux

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -4,6 +4,7 @@
     About
 {% endblock %}
 {% block body_block %}
+    <div>visits: {{ visits }}</div>
     <div>This tutorial has been put together by Jack<br>
         <img src="{% static "images/rango.jpg" %}">
     </div>
