--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -10,6 +10,7 @@
             Hey there partner!
         {% endif %}
     </div>
+    <div>visits: {{ visits }}</div>
     <div>
         {% if categories %}
             <h2>Most Liked Categories</h2>
