--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -6,7 +6,7 @@
 {% block body_block %}
     <h1>Add a Category</h1>
     <div>
-        <form id="category_form" method="post" action="/rango/add_category/">
+        <form role="form" id="page_form" id="category_form" method="post" action="/rango/add_category/">
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
                 {{ hidden }}
@@ -16,7 +16,8 @@
                 {{ field.help_text }}
                 {{ field }}
             {% endfor %}
-            <input type="submit" name="submit" value="Create Category">
+            <br>
+            <button class="btn btn-primary" type="submit" name="submit">Add Page</button>
         </form>
     </div>
 {% endblock %}
