--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -7,7 +7,10 @@
     <h1>Add a Page</h1>
     <div>
         {% if category%}
-            <form id="category_form" method="post" action="{% url 'add_page' category_name_slug=category.slug %}">
+            <form role="form" id="page_form" method="post" action="/rango/category/{{category.slug}}/add_page/">
+                <h2 class="form-signin-heading"> Add a Page to
+                    <a href="/rango/category/{{category.slug}}/">{{ category.name }}</a>
+                </h2>
                 {% csrf_token %}
                 {% for hidden in form.hidden_fields %}
                     {{ hidden }}
@@ -17,7 +20,8 @@
                     {{ field.help_text }}
                     {{ field }}
                 {% endfor %}
-                <input type="submit" name="submit" value="Create Page">
+                <br>
+                <button class="btn btn-primary" type="submit" name="submit">Add Page</button>
             </form>
         {% else %}
             <div>A category by this name does not exist</div>
